<resources>
    <string name="app_name">Goalie Shot Tracker</string>
    <string name="main_new_game">New Game</string>
    <string name="main_continue_game">Continue</string>
    <string name="main_player_stats">Player Stats</string>
    <string name="main_exit">Exit</string>
    <string name="game_shots">Shots</string>
    <string name="game_goal">Goal</string>
    <string name="game_goalie_image">Goalie</string>
    <string name="text_shots">text_shots</string>
    <string name="text_goals">text_goals</string>
    <string name="text_save_percentage">text_save_percentage</string>
    <string name="row_shots_on_net">Shots on Net</string>
    <string name="row_goals_against">Goals against</string>
    <string name="row_save_percentage">Save %</string>
</resources>
