<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_shots"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="156dp"
        android:onClick="onClick"
        android:text="@string/game_shots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="156dp"
        android:onClick="onClick"
        android:text="@string/game_goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.brando.goalieshottracker.DrawableImageView
        android:id="@+id/imageView"
        android:layout_width="392dp"
        android:layout_height="421dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/game_goalie_image"
        app:layout_constraintBottom_toTopOf="@+id/btn_shots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goalie_clip_art" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/game_stats"
        android:layout_width="395dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_shots"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:onClick="onClick"
                android:text="@string/row_shots_on_net"
                android:textColor="#E900091D" />

            <TextView
                android:id="@+id/text_shots"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="0"
                android:textColor="#E900091D" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_goals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:text="@string/row_goals_against"
                android:textColor="#E900091D"/>

            <TextView
                android:id="@+id/text_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="0"
                android:textColor="#E900091D"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_savePercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/row_save_percentage"
                android:textColor="#E900091D"/>

            <TextView
                android:id="@+id/text_savePercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="0"
                android:textColor="#E900091D"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>